# timetabler

./: CMakeLists.txt  README.md  TimeTabler.pro  auxiliary.cpp  auxiliary.h  csvrow.cpp  csvrow.h  input5-11.csv  printdata.cpp  printdata.h  settings.conf  timetabler.cpp  timetabler.h
